<resources>
    <string name="app_name">Trader Joe\'s</string>
    <string name="api_key">70e6a9b1b8904248b144b11bef4cbfed</string>
    <string name="name">Recipe Hub</string>

    <string name="Login">Login</string>
    <string name="new_user">Welcome New User</string>
    <string name="Next">Next</string>
    <string name="Back">Back</string>
    <string name="Register_New_User">Register New User</string>
    <string name="Password">Password</string>
    <string name="full_name">Insert Full Name</string>
    <string name="email_address">Insert Email Address</string>
    <string name="User_Name">User Name</string>
    <string name="reg_User_Name2">Create New User Name</string>
    <string name="reg_password">New Password</string>
    <string name="reg_reenter_password">Re-Enter Password</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="recipe_hub">RECIPE HUB</string>
    <string name="title_activity_pantry">Pantry</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="featured_recipes">Featured Recipes</string>
    <string name="recipe_hub1">Recipe Hub</string>
    <string name="my_pantry">My Pantry</string>
    <string name="welcome_user">Welcome User</string>
    <string name="shop">Shop</string>
    <string name="continue_without_account">Continue without Account</string>
    <string name="time">Time</string>
    <string name="meal_name">Meal Name</string>
    <string name="_2_persons">2 Persons</string>
    <string name="likes">Likes</string>
    <string name="employees">Employees</string>
    <string name="recipes">Recipes</string>
    <string name="customers">Customers</string>
    <string name="family">Family</string>
    <string name="email">Email</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="title_activity_my_pantry">myPantry</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add">Add</string>
    <string name="grocery_list">Grocery List</string>
    <string name="item_name">Item Name:</string>
    <string name="share">Share</string>
    <string name="enter_item_name">Enter item name</string>
    <string name="back">back</string>
    <string name="search">Search Recipes...</string>
</resources>