<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3E0D8"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/titleName"
        android:layout_width="324dp"
        android:layout_height="59dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="#E3E1D8"
        android:fontFamily="@font/trader_joes"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_error"
        android:textSize="45sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleName2"
        android:layout_width="324dp"
        android:layout_height="59dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:background="#E3E1D8"
        android:fontFamily="@font/trader_joes"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleName" />

    <TextView
        android:id="@+id/titleNewUser"
        android:layout_width="340dp"
        android:layout_height="69dp"
        android:layout_marginTop="24dp"
        android:background="#E3E1D8"
        android:fontFamily="@font/trader_joes"
        android:text="@string/Login"
        android:textColor="@color/design_default_color_error"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleName2" />

    <EditText
        android:id="@+id/username"
        android:layout_width="326dp"
        android:layout_height="96dp"
        android:layout_marginTop="24dp"
        android:autofillHints="username"
        android:hint="@string/User_Name"
        android:inputType="textPersonName|text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleNewUser" />

    <EditText
        android:id="@+id/password"
        android:layout_width="324dp"
        android:layout_height="91dp"
        android:layout_marginTop="24dp"
        android:autofillHints="password"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="104dp"
        android:layout_height="54dp"
        android:layout_marginTop="24dp"
        android:text="@string/Next"
        android:textColor="#EFEBE9"
        android:textColorLink="@color/design_default_color_error"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="221dp"
        android:layout_height="59dp"
        android:layout_alignWithParentIfMissing="false"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:text="@string/Register_New_User"
        android:textColor="#EFEBE9"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnContinue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignIn"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:layout_marginBottom="16dp"
        android:text="Continue without Account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>