<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="348dp"
        android:layout_height="168dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titleName"
            android:layout_width="324dp"
            android:layout_height="59dp"
            android:layout_marginTop="16dp"
            android:background="@color/cream"
            android:fontFamily="@font/trader_joes"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_error"
            android:textSize="45sp" />

        <TextView
            android:id="@+id/titleName2"
            android:layout_width="324dp"
            android:layout_height="59dp"
            android:layout_marginTop="10dp"
            android:background="@color/cream"
            android:layout_gravity="center"
            android:fontFamily="@font/trader_joes"
            android:text="@string/name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="45sp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="346dp"
        android:layout_height="495dp"
        android:layout_marginBottom="32dp"
        android:foregroundGravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleNewUser"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/my_border2"
                android:fontFamily="@font/trader_joes"
                android:gravity="center"
                android:text="@string/Register_New_User"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="343dp"
                android:layout_height="96dp"
                android:layout_marginBottom="10dp"
                android:background="@color/background"
                android:ems="20"
                android:hint="Insert Full Name"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:layout_marginBottom="10dp"
                android:background="@color/background"
                android:ems="20"
                android:hint="@string/email_address"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/reg_password"
                android:layout_width="343dp"
                android:layout_height="91dp"
                android:autofillHints="password"
                android:background="@color/background"
                android:hint="@string/reg_password"
                android:inputType="textPassword"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="113dp"
                tools:layout_editor_absoluteX="13dp"
                tools:layout_editor_absoluteY="24dp">

                <Button
                    android:id="@+id/backToLogin"
                    android:layout_width="149dp"
                    android:layout_height="65dp"
                    android:backgroundTint="@color/cream"
                    android:text="@string/Back"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btnCreateAccount"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btnCreateAccount"
                    android:layout_width="149dp"
                    android:layout_height="65dp"
                    android:backgroundTint="@color/cream"
                    android:text="@string/Next"
                    android:textColor="@color/black"
                    android:textColorLink="@color/design_default_color_error"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/backToLogin"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>