<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/red"
    android:id="@+id/random_list_container"
    app:cardElevation="8dp"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:fontFamily="@font/trader_joes"
            android:marqueeRepeatLimit="marquee_forever"
            android:padding="8dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/meal_name"
            android:textColor="@color/black"
            android:background="@color/cream"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView_food"
            android:scaleType="centerCrop"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:padding="5dp"
            android:layout_height="200dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="0dp"
                android:background="@color/cream"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <ImageView
                    android:src="@drawable/ic_servings"
                    android:padding="6dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/textView_servings"
                    android:textSize="19sp"
                    android:padding="8dp"
                    android:text="@string/_2_persons"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="0dp"
                android:background="@color/cream"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <ImageView
                    android:src="@drawable/ic_baseline_thumb_up_24"
                    android:layout_width="wrap_content"
                    android:padding="6dp"

                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/textView_likes"
                    android:textSize="19sp"
                    android:padding="8dp"
                    android:text="@string/likes"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:background="@color/cream"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <ImageView
                    android:src="@drawable/ic_baseline_timer_24"
                    android:layout_width="wrap_content"
                    android:padding="6dp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/textView_time"
                    android:textSize="19sp"
                    android:padding="8dp"
                    android:text="@string/time"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>